--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 </head>
 <body>
+<div class="container">
 	<div class="well"><h1>Welcome to Idea Overflow</h1></div>
 
 	<button id="hackMode" class="btn btn-block btn-large" onclick="toggleHack()" value="off">Enable Hack Mode</button>
@@ -13,9 +14,9 @@
 	<hr />
 	
 	<div class="controls input-append">
-		<input class="input-xxlarge" id="email" type="text" placeholder="Enter email to proceed"><button class="btn" type="button" onClick="cont()">Go!</button></input>
+		<input class="span11" id="email" type="text" placeholder="Enter email to proceed"><button class="btn" type="button" onClick="cont()">Go!</button></input>
 	</div>
-
+</div>
 
 	<script type="text/javascript">
 		navigator.geolocation.getCurrentPosition(GetLocation);
@@ -35,7 +36,7 @@
 			$.ajax({"url":"hackmodeonoff.php",
 				"data":{"status":$("#hackMode").val(),"email":$("#email").val(),"lat":$.lat,"lng":$.lng},
 				"success":function(){
-					window.location="bah";
+					window.location="home.html";
 				}
 			})
 		}
